--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
   "devDependencies": {
     "browser-sync": "^2.27.7",
     "gulp": "^4.0.2",
+    "gulp-cssnano": "^2.1.3",
+    "gulp-if": "^3.0.0",
     "gulp-sass": "^5.0.0",
+    "gulp-svgmin": "^4.1.0",
+    "gulp-useref": "^5.0.0",
     "sass": "^1.45.1"
   }
 }
